--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       font-size: 1.2em;
       color: #fff;
       margin: 0.6em 0 0.4em;
-      white-space: nowrap;
+      /* wraps on mobile without horizontal scroll */
+      white-space: normal;
     }
     .pill-bar {
       display: inline-flex;
@@ -104,6 +105,14 @@
       display: block;
       margin-bottom: 1em;
     }
+    .video-message-list-title {
+      font-size: 1.15em;
+      color: #ccc;
+      margin-top: 1em;
+      margin-bottom: 0.5em;
+      text-align: left;
+      padding: 0 1em;
+    }
     .course-covers {
       list-style: none;
       padding-left: 1.2em;
@@ -123,29 +132,6 @@
       left: 0;
       top: 0;
     }
-    .payment-buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 0.8em;
-      margin: 2em 0;
-    }
-    .payment-buttons a {
-      text-decoration: none;
-      color: #fff;
-      padding: 0.8em 1.2em;
-      border-radius: 999px;
-      font-weight: 700;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5em;
-    }
-    .btn-usa    { background: #3B82F6; }
-    .btn-india  { background: #D97706; }
-    .btn-nigeria{ background: #059669; }
-    .btn-sg     { background: #F59E0B; }
-    .btn-th     { background: #EF4444; }
-    .btn-pk     { background: #6366F1; }
     footer {
       font-size: 0.85em;
       color: #bbb;
@@ -154,9 +140,97 @@
     }
 
     /* ──────────────────────────────────────────────────────────────────
-       Video & Sign-Up Styles unchanged below this line
+       Masked Video Styles
     ────────────────────────────────────────────────────────────────── */
-    /* ... rest of your CSS ... */
+    .video-container {
+      position: relative;
+      padding-bottom: 56.25%;
+      height: 0;
+      overflow: hidden;
+      border-radius: 8px;
+    }
+    .video-wrapper {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      overflow: hidden;
+      border-radius: 8px;
+      background: #000;
+    }
+    .placeholder-frame {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      overflow: hidden;
+      cursor: pointer;
+      z-index: 100;
+    }
+    .placeholder-frame img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+    .play-button {
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80px; height: 80px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.85);
+      box-shadow: 0 0 15px #ffeb3b;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 101;
+    }
+    .play-button::after {
+      content: '';
+      display: block;
+      width: 0; height: 0;
+      border-left: 25px solid #000;
+      border-top: 15px solid transparent;
+      border-bottom: 15px solid transparent;
+    }
+    #player {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      display: none;
+      z-index: 0;
+    }
+    .click-overlay {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: 200;
+      cursor: pointer;
+    }
+
+    /* ──────────────────────────────────────────────────────────────────
+       Sign-Up Button Styles
+    ────────────────────────────────────────────────────────────────── */
+    .sign-up-btn {
+      display: none;
+      position: absolute;
+      bottom: 15%;
+      left: 10%;
+      padding: 0.8em 1.2em;
+      border: none;
+      border-radius: 4px;
+      background: #FFDD00;
+      color: #000;
+      font-weight: 700;
+      box-shadow: 0 0 8px rgba(255,221,0,0.7);
+      cursor: pointer;
+      z-index: 900;
+    }
+    @media (max-width: 600px) {
+      .title-group span { font-size: 2em; }
+      h2 { font-size: 1em; }
+      .video-message { font-size: 1em; }
+      .sign-up-btn { font-size: 0.9em; bottom: 10%; }
+    }
   </style>
 </head>
 <body>
@@ -166,7 +240,8 @@
       <span>Artificial Intelligence.</span>
       <span>Made Easy.</span>
     </div>
-    <h2>Understand AI → Using AI For Productivity → Build Real-World Solutions</h2>
+    <!-- Edited tagline -->
+    <h2>Understand AI → Use For Productivity → Build Solutions</h2>
     <div class="pill-bar">
       1 hour | Beginner Friendly | Hands-On Projects
     </div>
@@ -198,12 +273,12 @@
 
     <div class="arrow-up">↑↑↑↑</div>
 
-    <!-- UPDATED SECTION START -->
-    <div class="access-message">✨ AI Made Simple: A Beginner’s Guide for Everyone</div>
+    <!-- Edited section title -->
+    <div class="access-message">What the Course Covers</div>
+
     <div class="video-message">
-      <span class="intro">
-        In this short but powerful 1-hour course, we’ll demystify AI in a way that’s clear, engaging, and easy to understand.
-      </span>
+      <!-- intro removed -->
+      <!-- list-title removed -->
       <ul class="course-covers">
         <li>1 Hour beginner friendly course.</li>
         <li>What AI really is (and what it isn’t)</li>
@@ -214,30 +289,6 @@
         <li>Using AI for productivity as a freelancer and in the workplace</li>
       </ul>
     </div>
-
-    <!-- GLOBAL PAYMENTS BUTTONS -->
-    <div class="payment-buttons">
-      <a href="https://buy.stripe.com/fZueVc0F30DG5dRdk333W37" class="btn-usa">
-        🇺🇸 Pay $20 USD
-      </a>
-      <a href="https://buy.stripe.com/6oUbJ0fzX3PSeOrgwf33W38" class="btn-india">
-        🇮🇳 Pay ₹650 Rupees
-      </a>
-      <a href="https://buy.stripe.com/6oUfZg0F3868cGjbbV33W39" class="btn-nigeria">
-        🇳🇬 Pay ₦11,000 Naira
-      </a>
-      <a href="https://buy.stripe.com/00wfZgbjH5Y0gWzcfZ33W3a" class="btn-sg">
-        🇸🇬 Pay S$25 SGD
-      </a>
-      <a href="https://buy.stripe.com/3cIeVcevT0DG35Jfsb33W3b" class="btn-th">
-        🇹🇭 Pay ฿250 Thai Baht
-      </a>
-      <a href="https://buy.stripe.com/3cIfZgcnLcmo7lZeo733W3c" class="btn-pk">
-        🇵🇰 Pay PKR2,000
-      </a>
-    </div>
-    <!-- UPDATED SECTION END -->
-
   </main>
 
   <footer>
@@ -297,20 +348,21 @@
   <script>
     (async () => {
       const slug = 'ai-made-simple';
-      const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRSWqhCcu_XZW7SW5uZ3UZdKzvLm2zNw8DvMZV2TD_gcts6K-DBrLwd88pnXVn0xl0fxRRfGW0Y4iyN/pub?output=csv';
+      const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRSWqhCcu_XZW7SW5uZ3UZdKzvLm2zNw8DvMZV2TD_gcts6K-DBrLwd88pnXVn0xl0fxRRfGW0Y4iyN/pub?output=csv'; 
       const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSd0lD5dU8nsUbBzfqqRkLflTkJVrAQyvZXI81uXXyOPXpoUdA/viewform?usp=header';
 
       const res = await fetch(csvUrl);
       const text = await res.text();
       const rows = text.trim().split('\n').slice(1)
-        .map(r => r.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/).map(c => c.replace(/^"|"$/g, '')));
+        .map(r => r.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/)
+        .map(c => c.replace(/^"|"$/g, '')));
 
       const reviews = rows
         .filter(r => r[4] && r[4].toLowerCase() === slug)
         .sort((a, b) => new Date(b[3]) - new Date(a[3]));
       if (!reviews.length) return;
 
-      const avg = (reviews.reduce((sum, r) => sum + (parseFloat(r[2])||0), 0) / reviews.length).toFixed(1);
+      const avg = (reviews.reduce((sum, r) => sum + parseFloat(r[2]||0), 0) / reviews.length).toFixed(1);
       const count = reviews.length;
 
       const wrapper = document.createElement('div');
@@ -390,4 +442,4 @@
 
 </body>
 </html>
-```
+
