--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
     .payment-buttons {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: stretch;
+      width: 100%;
       gap: 0.8em;
       margin: 2em 0;
     }
@@ -146,10 +147,11 @@
       padding: 0.8em 1.2em;
       border-radius: 999px;
       font-weight: 700;
-      display: inline-flex;
+      display: flex;
+      justify-content: center;
       align-items: center;
       gap: 0.5em;
-      width: auto;
+      width: 100%;
     }
     .btn-usa     { background: #3B82F6; }
     .btn-india   { background: #D97706; }
@@ -262,7 +264,7 @@
       <span>Artificial Intelligence.</span>
       <span>Made Easy.</span>
     </div>
-    <h2>Understand AI → Use For Productivity → Build Solutions</h2>
+    <h2>Understand AI → Be Productivie → Build Solutions</h2>
     <div class="pill-bar">
       1 hour | Beginner Friendly | Hands-On Projects
     </div>
@@ -301,6 +303,7 @@
         In this short but powerful 1-hour course, we’ll demystify AI in a way that’s clear, engaging, and easy to understand.
       </span>
 
+      <div class="payment-intro">🌐 Pay in your local currency.</div>
       <div class="payment-buttons">
         <a href="https://buy.stripe.com/fZueVc0F30DG5dRdk333W37" class="btn-usa">
           🇺🇸 Pay $20 USD
@@ -311,14 +314,14 @@
         <a href="https://buy.stripe.com/6oUfZg0F3868cGjbbV33W39" class="btn-nigeria">
           🇳🇬 Pay ₦11,000 Naira
         </a>
+        <a href="https://buy.stripe.com/3cIfZgcnLcmo7lZeo733W3c" class="btn-pk">
+          🇵🇰 Pay PKR2,000
+        </a>
         <a href="https://buy.stripe.com/00wfZgbjH5Y0gWzcfZ33W3a" class="btn-sg">
           🇸🇬 Pay S$25 SGD
         </a>
         <a href="https://buy.stripe.com/3cIeVcevT0DG35Jfsb33W3b" class="btn-th">
           🇹🇭 Pay ฿250 Thai Baht
-        </a>
-        <a href="https://buy.stripe.com/3cIfZgcnLcmo7lZeo733W3c" class="btn-pk">
-          🇵🇰 Pay PKR2,000
         </a>
       </div>
     </div>
@@ -478,5 +481,3 @@
 </body>
 </html>
 ```
-
-
