--- a/index.html
+++ b/index.html
@@ -27,15 +27,12 @@
       margin: 0.2em 0;
       line-height: 1.1em;
     }
-
-    /* Edited tagline */
     h2 {
       font-size: 1.2em;
       color: #fff;
       margin: 0.6em 0 0.4em;
       white-space: normal;
     }
-
     .pill-bar {
       display: inline-flex;
       align-items: center;
@@ -135,37 +132,33 @@
       top: 0;
     }
 
-    /* ──────────────────────────────────────────────────────────────────
-       Payment Buttons (full-width vertical stack on white background)
-    ────────────────────────────────────────────────────────────────── */
-    .payment-intro {
-      font-size: 1.1em;
-      color: #fff;
-      margin-top: 2em;
-    }
+    /* PAYMENT BUTTONS (vertical list) */
     .payment-buttons {
       display: flex;
       flex-direction: column;
+      align-items: stretch;
+      width: 100%;
       gap: 0.8em;
       margin: 2em 0;
-      width: 100%;
     }
     .payment-buttons a {
-      background: #fff;
-      color: #000;
-      padding: 0.8em 1.2em;
-      border-radius: 4px;
-      font-weight: 700;
       text-decoration: none;
-      display: block;
-      text-align: center;
-      border: 1px solid #ccc;
+      color: #fff;
+      padding: 0.8em 1.2em;
+      border-radius: 999px;
+      font-weight: 700;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5em;
+      width: 100%;
     }
-    /* country-specific classes retained but background overridden */
-    .btn-usa, .btn-india, .btn-nigeria,
-    .btn-sg, .btn-th, .btn-pk {
-      /* no background color here; use default white */
-    }
+    .btn-usa     { background: #3B82F6; }
+    .btn-india   { background: #D97706; }
+    .btn-nigeria { background: #059669; }
+    .btn-sg      { background: #F59E0B; }
+    .btn-th      { background: #EF4444; }
+    .btn-pk      { background: #6366F1; }
 
     footer {
       font-size: 0.85em;
@@ -271,7 +264,6 @@
       <span>Artificial Intelligence.</span>
       <span>Made Easy.</span>
     </div>
-    <!-- 1) Updated tagline -->
     <h2>Understand AI → Be Productivie → Build Solutions</h2>
     <div class="pill-bar">
       1 hour | Beginner Friendly | Hands-On Projects
@@ -311,9 +303,7 @@
         In this short but powerful 1-hour course, we’ll demystify AI in a way that’s clear, engaging, and easy to understand.
       </span>
 
-      <!-- 2) Local-currency prompt -->
       <div class="payment-intro">🌐 Pay in your local currency.</div>
-      <!-- 3+4) Full-width white buttons, Pakistan after Nigeria -->
       <div class="payment-buttons">
         <a href="https://buy.stripe.com/fZueVc0F30DG5dRdk333W37" class="btn-usa">
           🇺🇸 Pay $20 USD
